@@ -43,10 +43,10 @@
     <br>
     <br>
     <br>
-  <h2 id="sco">Score: 0</h2>
-  <!--<p>Level: 0</p>
+  <h2 id="sco">Points: 0</h2>
+  <p id="curlvl">Level: 0</p>
   <progress id="lvl" max="100" value="0"></progress>
-  <p>0/100</p>-->
+  <p id="lvl_raw">0/100</p>
   <br>
   <!--<nav>
     <ul>-->
